@@ -112,10 +112,10 @@ public class CourseService {
 
         List<DtSimpleContent> contents = simpleContentRepository.findByCourse_IdOrderByCreatedDateAsc(course.getId()).stream()
                 .map(this::getDtSimpleContent)
-                .collect(Collectors.toList());
+                .toList();
         List<DtEvaluation> evaluations = evaluationRepository.findByCourse_IdOrderByCreatedDateAsc(course.getId()).stream()
                 .map(evaluationService::getDtEvaluation)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Object> allContents = new ArrayList<>();
         allContents.addAll(contents);
@@ -136,6 +136,34 @@ public class CourseService {
                 .collect(Collectors.toList());
 
         return new GetCourseResponse(getDtCourse(course), allContents, dtForums);
+    }
+
+    public Object getContentByTypeAndId(String courseId, String type, Long contentId) {
+        if (type == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Tipo de contenido obligatorio");
+        }
+        switch (type) {
+            case "simpleContent": {
+                SimpleContent sc = simpleContentRepository.findByIdAndCourse_Id(contentId, courseId);
+                if (sc == null) {
+                    throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Contenido no encontrado");
+                }
+                return getDtSimpleContent(sc);
+            }
+            case "evaluation": {
+                Evaluation e = evaluationRepository.findByIdAndCourse_Id(contentId, courseId);
+                if (e == null) {
+                    throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Contenido no encontrado");
+                }
+                return evaluationService.getDtEvaluation(e);
+            }
+            case "quiz": {
+                // No implementado aún
+                throw new ResponseStatusException(HttpStatus.NOT_IMPLEMENTED, "Quiz no implementado");
+            }
+            default:
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Tipo de contenido inválido");
+        }
     }
 
     public DtSimpleContent createSimpleContent(String courseId, CreateSimpleContentRequest req) throws IOException {
@@ -248,11 +276,11 @@ public class CourseService {
                     errors.add("Fila " + lineNumber + ": ID inválido (máximo 10 caracteres, solo mayúsculas y números)");
                     continue;
                 }
-                if (name == null || name.isEmpty()) {
+                if (name.isEmpty()) {
                     errors.add("Fila " + lineNumber + " (" + id + "): Nombre obligatorio");
                     continue;
                 }
-                if (professorsCell == null || professorsCell.isEmpty()) {
+                if (professorsCell.isEmpty()) {
                     errors.add("Fila " + lineNumber + " (" + id + "): Profesores asignados obligatorios");
                     continue;
                 }
@@ -323,4 +351,21 @@ public class CourseService {
 
         return evaluationService.getDtEvaluation(saved);
     }
+
+    public DtSimpleContent updateSimpleContent(Long contentId, CreateSimpleContentRequest req) throws IOException {
+        SimpleContent sc = simpleContentRepository.findById(contentId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Contenido no encontrado"));
+
+        if (req.getTitle() != null) sc.setTitle(req.getTitle());
+        if (req.getContent() != null) sc.setContent(req.getContent());
+        if (req.getFile() != null) {
+            DtFileResource file = fileStorageService.store(req.getFile());
+            sc.setFileName(file.getFilename());
+            sc.setFileUrl(file.getStoragePath());
+        }
+
+        SimpleContent saved = simpleContentRepository.save(sc);
+        return getDtSimpleContent(saved);
+    }
+
 }
